--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
+    "webpack-dev-server": "^1.14.1",
     "youtube-api-search": "0.0.5"
   }
 }
